--- a/pr101 - RPClient - SWT Basic/.classpath
+++ b/pr101 - RPClient - SWT Basic/.classpath
@@ -16,10 +16,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/Win64/swt.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://help.eclipse.org/mars/topic/org.eclipse.platform.doc.isv/reference/api/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr103 - ShareDB"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr104 - Utilities"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SWT-4.5-win32-win32-x86_64"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
