--- a/pr101 - RPClient - SWT Basic/.classpath
+++ b/pr101 - RPClient - SWT Basic/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/pr103 - ShareDB"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr104 - Utilities"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SWT-4.5-win32-win32-x86_64"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr105 - S2DB"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
