Added SVG-PNG transcoding library (to POM) (but is not used)

--- a/pr101 - RPClient - SWT Basic/pom.xml
+++ b/pr101 - RPClient - SWT Basic/pom.xml
@@ -29,5 +29,14 @@
   		<version>4.3</version>
   		<scope>provided</scope>
   	</dependency> -->
+  	
+  	<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-transcoder -->
+<dependency>
+    <groupId>org.apache.xmlgraphics</groupId>
+    <artifactId>batik-transcoder</artifactId>
+    <version>1.7</version>
+</dependency>
+  	
+  	
   </dependencies>
 </project>
