--- a/pr101 - RPClient - SWT Basic/.classpath
+++ b/pr101 - RPClient - SWT Basic/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SWT-4.5-win32-win32-x86_64"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr105 - S2DB"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr109 - Audio"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr102 - Tesla Vehicle Interface"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
