--- a/pr101 - RPClient - SWT Basic/.classpath
+++ b/pr101 - RPClient - SWT Basic/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SWT_Win32"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr110 - S2 File Session"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Pi4J"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
