--- a/pr101 - RPClient - SWT Basic/pom.xml
+++ b/pr101 - RPClient - SWT Basic/pom.xml
@@ -17,6 +17,7 @@
     </plugins>
   </build>
   <dependencies>
+  
 <!--   <dependency>
   		<groupId>org.eclipse.swt</groupId>
   		<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
@@ -31,12 +32,17 @@
   	</dependency> -->
   	
   	<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-transcoder -->
-<dependency>
-    <groupId>org.apache.xmlgraphics</groupId>
-    <artifactId>batik-transcoder</artifactId>
-    <version>1.7</version>
-</dependency>
-  	
+	<dependency>
+		<groupId>org.apache.xmlgraphics</groupId>
+		<artifactId>batik-transcoder</artifactId>
+		<version>1.7</version>
+	</dependency>
+
+	<dependency>
+		<groupId>com.pi4j</groupId>
+		<artifactId>pi4j-core</artifactId>
+		<version>1.1</version>
+	</dependency>
   	
   </dependencies>
 </project>
