--- a/pr101 - RPClient - SWT Basic/pom.xml
+++ b/pr101 - RPClient - SWT Basic/pom.xml
@@ -30,6 +30,26 @@
   		<version>4.3</version>
   		<scope>provided</scope>
   	</dependency> -->
+
+		<dependency>
+			<groupId>javax.json</groupId>
+			<artifactId>javax.json-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+
+
   	
   	<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-transcoder -->
 	<dependency>
