System Manager now runs cron jobs and executes actions on triggers

--- a/pr106 - S2 - Tesla/.classpath
+++ b/pr106 - S2 - Tesla/.classpath
@@ -19,5 +19,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr110 - S2 File Session"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
