--- a/pr115 - S2 - System Manager/.classpath
+++ b/pr115 - S2 - System Manager/.classpath
@@ -20,5 +20,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr106 - S2 - Tesla"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr102 - Tesla Vehicle Interface"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr116 - Email, SMS"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr104 - Utilities"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr114 - S2 - Nest"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr113 - Nest Devices Interface"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
