--- a/pr115 - S2 - System Manager/.classpath
+++ b/pr115 - S2 - System Manager/.classpath
@@ -30,5 +30,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Drools 7.6.0.Final"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr107 - S2 - Imports"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr119 - CronTrigger"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr120 - S2 Email Control"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
