--- a/pr118 - Drools/.classpath
+++ b/pr118 - Drools/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Drools 7.6.0.Final"/>
+	<classpathentry kind="con" path="DROOLS/Drools"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Drools 7.7.0.Final"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
