--- a/pr113 - Nest Devices Interface/.classpath
+++ b/pr113 - Nest Devices Interface/.classpath
@@ -12,11 +12,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr104 - Utilities"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Git_nest-controller__20180224"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/External - nest-controller"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
