--- a/pr115 - S2 - System Manager/pom.xml
+++ b/pr115 - S2 - System Manager/pom.xml
@@ -73,6 +73,19 @@
         </dependency>
 
 
+
+		<!-- Use this for mail from now on -->
+		<!-- see:
+				https://stackoverflow.com/questions/16807758/java-lang-noclassdeffounderror-com-sun-mail-util-maillogger-for-junit-test-case?utm_medium=organic&utm_source=google_rich_qa&utm_campaign=google_rich_qa
+		 --> 
+
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 </project>
