--- a/pr115 - S2 - System Manager/.classpath
+++ b/pr115 - S2 - System Manager/.classpath
@@ -31,5 +31,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/KTable 2.2.0"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr122 - S2 GAE Interface"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
