--- a/pr121 - S2 GAE/pom.xml
+++ b/pr121 - S2 GAE/pom.xml
@@ -51,6 +51,15 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    
+    
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.9</version>
+		</dependency>
+
 
     <!-- Test Dependencies -->
     <dependency>
