--- a/pr121 - S2 GAE/pom.xml
+++ b/pr121 - S2 GAE/pom.xml
@@ -59,8 +59,29 @@
 			<artifactId>httpcore</artifactId>
 			<version>4.4.9</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.google.appengine/appengine-api-1.0-sdk -->
+<!--	<dependency>
+		    <groupId>com.google.appengine</groupId>
+		    <artifactId>appengine-api-1.0-sdk</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+-->		
+		<!-- https://mvnrepository.com/artifact/com.google.appengine/appengine-api-1.0-sdk -->
+		<dependency>
+		    <groupId>com.google.appengine</groupId>
+		    <artifactId>appengine-api-1.0-sdk</artifactId>
+		    <version>1.9.63</version>
+		</dependency>
+		 
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.7</version>
+		</dependency>
 
-
+		 
     <!-- Test Dependencies -->
     <dependency>
       <groupId>junit</groupId>
