Many improvements: multiple cameras, project deps in GAE, doc ui

--- a/pr121 - S2 GAE/.classpath
+++ b/pr121 - S2 GAE/.classpath
@@ -28,5 +28,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/Projects-dependencies.jar"/>
 	<classpathentry kind="output" path="target/pr121-0.1.0-SNAPSHOT/WEB-INF/classes"/>
 </classpath>
