--- a/pr121 - S2 GAE/pom.xml
+++ b/pr121 - S2 GAE/pom.xml
@@ -38,13 +38,13 @@
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
-      <scope>provided</scope>
+<!--       <scope>provided</scope>  -->
     </dependency>
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>javax.servlet.jsp-api</artifactId>
       <version>2.3.1</version>
-      <scope>provided</scope>
+<!--       <scope>provided</scope>  -->
     </dependency>
     <dependency>
       <groupId>jstl</groupId>
@@ -81,6 +81,63 @@
 		    <version>3.7</version>
 		</dependency>
 
+		<!-- will not load..
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+		 -->
+		 
+		<dependency>
+			<groupId>com.google.appengine.tools</groupId>
+			<artifactId>appengine-gcs-client</artifactId>
+			<version>0.7</version>
+		</dependency>
+		 
+		 
+		 
+    <dependency>                        <!-- Google Cloud Client Library for Java -->
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud</artifactId>
+      <version>0.47.0-alpha</version>
+    </dependency>
+
+    <dependency>                        <!-- Google API client - for stuff that's not in gcloud-->
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>1.23.0</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava-jdk5</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>                        <!-- Google+ API Client Library for Java -->
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-plus</artifactId>
+      <version>v1-rev550-1.23.0</version>
+    </dependency>
+
+    <dependency>                        <!-- https://github.com/FasterXML/jackson-databind -->
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.5</version>
+    </dependency>
+
+    <dependency>                        <!-- Google Core Libraries for Java -->
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>  <!-- https://github.com/google/guava/wiki -->
+      <version>23.0</version>
+    </dependency>
+		 
+		 
+		 
+		 
+		 
+		 
 		 
     <!-- Test Dependencies -->
     <dependency>
