Integration of GCS into S2 home, upload thumb caps every 10 min

--- a/pr115 - S2 - System Manager/.classpath
+++ b/pr115 - S2 - System Manager/.classpath
@@ -32,5 +32,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/KTable 2.2.0"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr122 - S2 GAE Interface"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr123 - Google Cloud Services"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
