--- a/pr123 - Google Cloud Services/.classpath
+++ b/pr123 - Google Cloud Services/.classpath
@@ -17,5 +17,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr104 - Utilities"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr122 - S2 GAE Interface"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
