--- a/pr121 - S2 GAE/.classpath
+++ b/pr121 - S2 GAE/.classpath
@@ -28,6 +28,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/Projects-dependencies.jar" sourcepath="C:/Development/CM/Git_Projects__20180121/pr123 - Google Cloud Services/src"/>
+	<classpathentry kind="lib" path="lib/Projects-dependencies.jar"/>
 	<classpathentry kind="output" path="target/pr121-0.1.0-SNAPSHOT/WEB-INF/classes"/>
 </classpath>
