--- a/pr111 - S2 Resources/config/conky.conf
+++ b/pr111 - S2 Resources/config/conky.conf
@@ -69,7 +69,7 @@ ${color grey}IP wlan0:$color ${addr wlan0}
 ${color grey}IP  eth1:$color ${addr eth1}
 $hr
 ${color grey}${exec cat /tmp/conky-device_info.txt | head -1}
-${color grey}Image:$color ${exec cat ~pi/conky-image_info.txt | head -1}
+#${color grey}Image:$color ${exec cat ~pi/conky-image_info.txt | head -1}
 #${color grey}Share (items in root):$color ${exec ls -l /Share | wc -l}
 ${color grey}Network Share use:$color ${exec df -h | grep Share | awk '{print $5}'}
 $hr
