--- a/pr104 - Utilities/pom.xml
+++ b/pr104 - Utilities/pom.xml
@@ -16,12 +16,12 @@
       </plugin>
     </plugins>
   </build>
-  
-  
-  
-  
 
-  <dependencies>
+
+
+
+
+	<dependencies>
 
 		<dependency>
 			<groupId>javax.json</groupId>
@@ -41,8 +41,13 @@
 			<version>2.8.0</version>
 		</dependency>
 
-	
-  </dependencies>  
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.7</version>
+		</dependency>
+		
+	</dependencies>  
     
   
   
