--- a/pr105 - S2DB/pom.xml
+++ b/pr105 - S2DB/pom.xml
@@ -56,6 +56,14 @@
 			<version>1.4</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.7</version>
+		</dependency>
+		
+
 	</dependencies>
 
 
