Small changes to the pr121 (S2-GAE) project

--- a/pr121 - S2 GAE/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
+++ b/pr121 - S2 GAE/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
@@ -1,6 +1,7 @@
 account.email=jeff.rabenhorst@gmail.com
 eclipse.preferences.version=1
 include.optional.configuration.files=true
+project.allowObsoleteRuntime=false
 project.bucket=
 project.id=pr121-s2gae
 project.previousVersion.stop=true
