--- a/pr115 - S2 - System Manager/.classpath
+++ b/pr115 - S2 - System Manager/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/pr107 - S2 - Imports"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr119 - CronTrigger"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr120 - S2 Email Control"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -33,5 +33,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/pr122 - S2 GAE Interface"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr123 - Google Cloud Services"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SWT_Win64"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr128 - S2 Reports"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
