--- a/pr104 - Utilities/pom.xml
+++ b/pr104 - Utilities/pom.xml
@@ -52,7 +52,21 @@
 			<artifactId>commons-math3</artifactId>
 			<version>3.6.1</version>
 		</dependency>
+	
 			
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-exec -->
+		<dependency>
+    		<groupId>org.apache.commons</groupId>
+	    	<artifactId>commons-exec</artifactId>
+    		<version>1.3</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+    		<groupId>commons-io</groupId>
+    		<artifactId>commons-io</artifactId>
+    		<version>2.6</version>
+		</dependency>
 		
 	</dependencies>  
     
