--- a/pr123 - Google Cloud Services/pom.xml
+++ b/pr123 - Google Cloud Services/pom.xml
@@ -47,6 +47,14 @@
 		    <artifactId>appengine-api-1.0-sdk</artifactId>
 		    <version>1.9.63</version>
 		</dependency>
+	
+	
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-vision</artifactId>
+			<version>1.74.0</version>
+		</dependency>
+
 		 
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 		<dependency>
