Updated conky, db backup

--- a/pr111 - S2 Resources/config/conky.conf
+++ b/pr111 - S2 Resources/config/conky.conf
@@ -65,8 +65,9 @@ double_buffer yes
 TEXT
 ${color grey}MAC eth0:$color ${execi 99999 cat /sys/class/net/eth0/address | awk '{print toupper($1)}' | sed 's/:/-/g'}
 ${color grey}IP  eth0:$color ${addr eth0}
-${color grey}IP wlan0:$color ${addr wlan0}
 ${color grey}IP  eth1:$color ${addr eth1}
+${color grey}IP wlan0:$color ${addr wlan0}
+${color grey}IP wlan1:$color ${addr wlan1}
 $hr
 ${color grey}${exec cat /tmp/conky-device_info.txt | head -1}
 #${color grey}Image:$color ${exec cat ~pi/conky-image_info.txt | head -1}
@@ -75,7 +76,7 @@ ${color grey}Network Share use:$color ${exec df -h | grep Share | awk '{print $5
 $hr
 ${color grey}Uptime:$color $uptime
 #${color grey}Frequency (in MHz):$color $freq
-${color grey}CPU temp (C):$color $acpitemp
+${color grey}CPU temp:$color $acpitemp        ${exec /usr/bin/vcgencmd get_throttled}
 ${color grey}RAM:$color $mem/$memmax - $memperc% ${membar 4}
 ${color grey}Swap:$color $swap/$swapmax - $swapperc% ${swapbar 4}
 ${color grey}CPU Usage:$color $cpu% ${cpubar 4}
