--- a/pr124 - Camera Still Capture/pom.xml
+++ b/pr124 - Camera Still Capture/pom.xml
@@ -24,5 +24,26 @@
         <version>4.0.0</version>
   	</dependency>
  -->
+     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.2</version>
+     </dependency>
+     
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <scope>provided</scope>
+      <version>1.0.9</version>
+    </dependency>
+
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.6</version>
+	</dependency>
+ 
+ 
+ 
    </dependencies>
 </project>
