Posting Job events, detects unresponsive pr124

--- a/pr130 - S2 Desktop Assistant/.classpath
+++ b/pr130 - S2 Desktop Assistant/.classpath
@@ -22,5 +22,6 @@
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr104 - Utilities"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr125 - S2 Camera Capture"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr105 - S2DB"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
