Updated conky config

--- a/pr111 - S2 Resources/config/conky.conf
+++ b/pr111 - S2 Resources/config/conky.conf
@@ -61,13 +61,12 @@ double_buffer yes
 #default_bar_size 0 8
 #default_gauge_size 0 10
 #default_graph_size 0 25
-
 TEXT
-${color grey}MAC eth0:$color ${execi 99999 cat /sys/class/net/eth0/address | awk '{print toupper($1)}' | sed 's/:/-/g'}
-${color grey}IP  eth0:$color ${addr eth0}
-${color grey}IP  eth1:$color ${addr eth1}
-${color grey}IP wlan0:$color ${addr wlan0}
-${color grey}IP wlan1:$color ${addr wlan1}
+${color grey}MAC  eth0:$color ${execi 99999 cat /sys/class/net/eth0/address | awk '{print toupper($1)}' | sed 's/:/-/g'}
+${color grey}MAC wlan0:$color ${execi 99999 cat /sys/class/net/wlan0/address | awk '{print toupper($1)}' | sed 's/:/-/g'}
+${color grey} IP  eth0:$color ${addr eth0}
+${color grey} IP wlan0:$color ${addr wlan0}
+${color grey} IP  eth1:$color ${addr eth1}
 $hr
 ${color grey}${exec cat /tmp/conky-device_info.txt | head -1}
 #${color grey}Image:$color ${exec cat ~pi/conky-image_info.txt | head -1}
