--- a/pr111 - S2 Resources/config/conky.conf
+++ b/pr111 - S2 Resources/config/conky.conf
@@ -68,10 +68,11 @@ ${color grey} IP  eth0:$color ${addr eth0}
 ${color grey} IP wlan0:$color ${addr wlan0}
 ${color grey} IP  eth1:$color ${addr eth1}
 $hr
-${color grey}${exec cat /tmp/conky-device_info.txt | head -1}
+#${color grey}${exec cat /tmp/conky-device_info.txt | head -1}
+${color grey}${exec jq '.description' /tmp/session/device_config.json}
 #${color grey}Image:$color ${exec cat ~pi/conky-image_info.txt | head -1}
 #${color grey}Share (items in root):$color ${exec ls -l /Share | wc -l}
-${color grey}Network Share use:$color ${exec df -h | grep Share | awk '{print $5}'}
+${color grey}Network Share use:$color ${exec df -h | grep Share | head -1 | awk '{print $5}'}
 $hr
 ${color grey}Uptime:$color $uptime
 #${color grey}Frequency (in MHz):$color $freq
