--- a/pr130 - S2 Desktop Assistant/pom.xml
+++ b/pr130 - S2 Desktop Assistant/pom.xml
@@ -39,6 +39,18 @@
 			<version>2.6</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.18</version>
+		</dependency>
+				
+		<dependency>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		    <version>1.4</version>
+		</dependency>
+				
 	</dependencies>
   
 </project>
