--- a/pr130 - S2 Desktop Assistant/.classpath
+++ b/pr130 - S2 Desktop Assistant/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/pr125 - S2 Camera Capture"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr105 - S2DB"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr117 - S2 - System Tools"/>
+	<classpathentry kind="lib" path="lib/javax.json-api-1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
