--- a/pr113 - Nest Devices Interface/.classpath
+++ b/pr113 - Nest Devices Interface/.classpath
@@ -17,6 +17,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/External - nest-controller"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/nest-controller__20190123"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
