--- a/pr114 - S2 - Nest/.classpath
+++ b/pr114 - S2 - Nest/.classpath
@@ -20,6 +20,6 @@
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr105 - S2DB"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr110 - S2 File Session"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/External - nest-controller"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/nest-controller__20190123"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
