--- a/pr120 - S2 Email Control/.classpath
+++ b/pr120 - S2 Email Control/.classpath
@@ -18,5 +18,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr104 - Utilities"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr123 - Google Cloud Services"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
