--- a/pr105 - S2DB/pom.xml
+++ b/pr105 - S2DB/pom.xml
@@ -1,9 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>pr105</groupId>
-	<artifactId>pr105</artifactId>
+	
+    <groupId>jmr</groupId>
+    <artifactId>jmr.pr105</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -62,19 +64,12 @@
 			<version>1.4</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.7</version>
 		</dependency>
-		
 
 	</dependencies>
-
-
-
-
-
 
 </project>
